# microservices_playground

./: docker-compose.yml
admin/: Dockerfile  docker-compose.yml  pyproject.toml
admin/src/: api.py  consumer.py  database.py  main.py  models.py  producer.py
main/: docker-compose.yml  pyproject.toml
main/src/: api.py  consumer.py  database.py  main.py  models.py  schemas.py
mq/: docker-compose.yml
